<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="enable_disable">Enable/Disable</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="app_name">Botifier</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="general">General</string>
    <string name="persistent_notification">Process persistent</string>
    <string name="persistent_notification_desc">Process persistent notifications</string>
    <string name="applications">Application White List</string>
    <string name="applications_desc">Applications which notifications will be shown</string>
    <string name="metadata_display">Device display</string>
    <string name="timeout">Timeout</string>
    <string name="timeout_desc">Time in seconds when to automatically clear notification.</string>
    <string name="filters">Filters</string>
    <string name="blacklist">Text Black List</string>
    <string name="blacklist_add">Add Black List</string>
    <string name="blacklist_edit">Edit Black List</string>
    <string name="blacklist_desc">Example: To hide notifcations containing the word \"car\", enter \"*car*\".</string>
    <string name="action_settings">Settings</string>
    <string name="metadata_artist">Artist</string>
    <string name="metadata_album">Album</string>
    <string name="metadata_title">Title</string>
    <string name="actions">Actions</string>
    <string name="action_reload">Show</string>
    <string name="action_string">Set message</string>
    <string name="category_tts">Text to Speech</string>
    <string name="action_tts">Enable</string>
    <string name="action_tts_desc">Enable text to speech</string>
    <string name="tts_value">Text to Speak</string>
    <string name="bt_only">On Bluetooth</string>
    <string name="bt_only_desc_tts">Enable TTS only when using Bluetooth</string>
    <string name="bt_only_desc_meta">Enable text only when using Bluetooth</string>
    <string name="maxlength">Max Length</string>
    <string name="maxlength_desc">Maximum length of text displayed</string>
    <string name="debug">Debug</string>
    <string name="open_settings">Give Botifier Access</string>
    <string name="open_settings_descr">Open SystemSettings to allow Botifier to receive notifications</string>
    <string name="makenotification">Test Notification</string>
    <string name="custom_title">Enter custom text</string>
    <string name="custom_description">Usage:\n\n
%f: Full Notification\n
%m: Notification Message\n
%d: Notification Description\n
%a: Application Name</string>
    
    <string-array name="metadata_fields">
        <item >All</item>
        <item >Application Name</item>
        <item >Notification Message</item>
        <item >Notification Description</item>
        <item >Custom</item>
    </string-array>
    
   <string-array name="metadata_fields_values">
        <item >%f</item>
        <item >%a</item>
        <item >%m</item>
        <item >%d</item>
        <item >custom</item> 
   </string-array>


    <!-- preference -->
    <string name="notification_plugins">Notification Plugins</string>
    <string name="device_display">Device Display</string>

   <!-- Smart watch stuf -->
   <string name="extension_name">Botifier</string>
   <string name="configuration_text">What is this</string>
   <string name="sw2_long">Sony Smartwatch 2</string>
   <string name="clear_all">Clear All</string>
   <string name="title_sw_keep_cleared">Keep removed notifications</string>

</resources>
