<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/category_tts">
        <CheckBoxPreference android:title="@string/action_tts"
            android:key="action_tts"
            android:summary="@string/action_tts_desc"
            android:defaultValue="false" />
   	    <ListPreference android:entries="@array/metadata_fields"
			android:key="tts_value"
            android:entryValues="@array/metadata_fields_values"
            android:defaultValue="%m"
            android:dialogTitle="@string/tts_value" android:title="@string/tts_value"/>
   	    <CheckBoxPreference android:title="@string/bt_only"
            android:key="tts_bt_only"
            android:summary="@string/bt_only_desc_tts"
            android:defaultValue="true" />
   	        
	</PreferenceCategory>
    
    <PreferenceCategory android:title="@string/metadata_display">
	    <ListPreference android:entries="@array/metadata_fields"
	        			android:key="metadata_artist"
	                    android:entryValues="@array/metadata_fields_values"
	                    android:defaultValue="%a"
	                    android:dialogTitle="@string/metadata_artist" android:title="@string/metadata_artist"/>
	    <ListPreference android:entries="@array/metadata_fields"
	        			android:key="metadata_album" 
	                    android:entryValues="@array/metadata_fields_values"
	                    android:defaultValue="%d" 
	                    android:dialogTitle="@string/metadata_album" android:title="@string/metadata_album"/>
	    <ListPreference android:entries="@array/metadata_fields"
	        			android:key="metadata_title" 
	                    android:entryValues="@array/metadata_fields_values"
	                    android:defaultValue="%m" 
	                    android:dialogTitle="@string/metadata_title" android:title="@string/metadata_title"/>
	    <EditTextPreference android:numeric="integer"
	        			android:key="maxlength"
	        			android:dialogTitle="@string/maxlength"
	        			android:summary="@string/maxlength_desc"
	        			android:title="@string/maxlength"/>
     	<CheckBoxPreference android:title="@string/bt_only"
            android:key="metadata_bt_only"
            android:summary="@string/bt_only_desc_meta"
            android:defaultValue="true" />
	        
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/filters">
    	<Preference android:title="@string/blacklist" android:key="blacklist"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/debug">
        <Preference android:title="@string/action_makenotification"
          		android:key="action_makenotification"
        />
        
    </PreferenceCategory>
    
</PreferenceScreen>
